syntax = "proto3";


message ContractionHierarchy {
  bool _locked = 1;
  bool _geoJsonFlag = 2;
  
  message EdgeAttrs {
    uint32 end = 1;
    double  cost = 2;
    uint32 attrs = 3;
  }
  
  message AdjList {
    repeated EdgeAttrs edges = 1;
  }
  
  repeated AdjList adjacency_list = 3;
  repeated AdjList reverse_adjacency_list = 4;
  map<string, uint32> _nodeToIndexLookup = 5;
  
  repeated google.protobuf.Struct _edgeProperties = 6;

  message LineStringAray {
    repeated double coords = 1;
  }
  
  message GeometryArray {
    repeated LineStringAray linestrings = 1;
  }
  
  repeated GeometryArray _edgeGeometry = 7;

}